# poc-hybrid-voice-agent

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vite.config.js
AzureEmbeddedSpeech/: AzureEmbeddedSpeech.csproj  Program.cs  README.md
frontend/src/: VoiceAgentApp.jsx  browserRuntime.js  main.jsx
native/azure_embedded_speech_grpc/: CMakeLists.txt
native/azure_embedded_speech_grpc/src/: main.cpp  tts_main.cpp
native/azure_embedded_speech_grpc/tests/: preload_registry_test.cpp  tts_voice_routing_test.cpp
protos/: azure_embedded_speech.proto
scripts/: decrypt_model.py  gemma4_e2b_smoke.py  generate_grpc_stubs.py  http_turn_check.py  models_inventory.py  real_chain_check.py  start_azure_embedded_tts.ps1  start_llama_cpp_e2b.ps1  turn_events_check.py  ws_turn_check.py
src/poc_hybrid_voice_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/voice_agent/: __init__.py  config.py  health.py  pipecat_server.py  pipeline.py  real_turn.py  server.py  smoke.py
src/voice_agent/pipecat_runtime/: __init__.py  events.py  pure_turn.py  session.py
src/voice_agent/providers/: __init__.py  asr.py  azure_embedded_pb2.py  azure_embedded_pb2_grpc.py  gemma4_e2b.py  lfm2_audio.py  llm_foundry.py  llm_llama_cpp.py  tts_windows.py  vad.py
src/voice_agent/providers/_generated/: azure_embedded_speech_pb2.py  azure_embedded_speech_pb2_grpc.py
src/voice_agent/tools/: __init__.py  copilot_agent.py  policy.py
tests/: test_config.py  test_llama_cpp_provider.py  test_pipecat_runtime.py  test_pipeline.py  test_providers.py  test_pure_pipecat_turn.py  test_real_turn.py  test_server.py  test_smoke.py  test_tool_policy.py
web/: app.js  index.html  react-ui.js  styles.css
