[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poc-hybrid-voice-agent"
version = "0.1.0"
description = "Local-first Pipecat voice assistant with browser audio, Foundry Local, Windows TTS, and guarded Copilot automation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "websockets>=12",
    "grpcio>=1.64",
    "protobuf>=5.27",
    "pipecat-ai>=0.0.76",
]

[project.optional-dependencies]
local-audio = [
    "azure-cognitiveservices-speech>=1.50",
    "onnxruntime>=1.18",
    "webrtcvad-wheels>=2.0.14",
    "faster-whisper>=1.0",
    "silero-vad>=6.2",
    "edge-tts>=7.2",
    "pyttsx3>=2.90",
    "foundry-local-sdk-winml>=0.1",
]
gemma-hf = [
    "transformers>=4.57",
    "torch>=2.3",
    "accelerate>=1.14",
    "huggingface-hub>=0.30",
    "soundfile>=0.12",
    "av>=12",
]
lfm2-audio = [
    "liquid-audio>=1.3",
    "torch>=2.3",
    "soundfile>=0.12",
    "av>=12",
]
dev = [
    "pytest>=8.2",
    "grpcio-tools>=1.64",
]

[project.scripts]
voice-agent = "voice_agent.server:main"
voice-agent-pipecat = "voice_agent.pipecat_server:main"
voice-agent-health = "voice_agent.health:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
